--- a/src/components/IconInput/IconInput.stories.mdx
+++ b/src/components/IconInput/IconInput.stories.mdx
@@ -2,37 +2,37 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 import IconInput from './IconInput';
 
 <Meta
-  title="IconInput"
-  component={IconInput}
-  argTypes={{
-    placeholder: {
-      control: {
-        type: 'text',
-      },
-    },
-    icon: {
-      control: {
-        type: 'select',
-        options: ['search', 'at-sign'],
-      },
-    },
-    size: {
-      control: {
-        type: 'select',
-        options: ['small', 'large'],
-      },
-    },
-    label: {
-      control: {
-        type: 'text',
-      },
-    },
-    width: {
-      control: {
-        type: 'number',
-      },
-    },
-  }}
+	title='IconInput'
+	component={IconInput}
+	argTypes={{
+		placeholder: {
+			control: {
+				type: 'text',
+			},
+		},
+		icon: {
+			control: {
+				type: 'select',
+				options: ['search', 'at-sign'],
+			},
+		},
+		size: {
+			control: {
+				type: 'select',
+				options: ['small', 'large'],
+			},
+		},
+		label: {
+			control: {
+				type: 'text',
+			},
+		},
+		width: {
+			control: {
+				type: 'number',
+			},
+		},
+	}}
 />
 
 export const Template = (args) => <IconInput {...args} />;
@@ -40,13 +40,13 @@ export const Template = (args) => <IconInput {...args} />;
 # IconInput
 
 <Story
-  name="Default"
-  args={{
-    placeholder: 'Search…',
-    label: 'Search',
-    icon: 'search',
-    size: 'small',
-  }}
+	name='Default'
+	args={{
+		placeholder: 'Search…',
+		label: 'Search',
+		icon: 'search',
+		size: 'small',
+	}}
 >
-  {Template.bind({})}
+	{Template.bind({})}
 </Story>
